--- a/package.json
+++ b/package.json
@@ -15,6 +15,5 @@
   "bugs": {
     "url": "https://github.com/raakeysh/jasmine-test/issues"
   },
-  "homepage": "https://github.com/raakeysh/jasmine-test#readme",
-  "homepage1": "https://github.com/raakeysh/jasmine-test#readme"
+  "homepage": "https://github.com/raakeysh/jasmine-test#readme"
 }
