add gitignore file

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/raakeysh/jasmine-test/issues"
   },
-  "homepage": "https://github.com/raakeysh/jasmine-test#readme"
+  "homepage": "https://github.com/raakeysh/jasmine-test#readme",
+  "devDependencies": {
+    "typescript": "^4.1.3"
+  }
 }
