--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "Learning jasmine test",
   "main": "index.js",
   "scripts": {
+    "build": "npx webpack --mode=development --config=webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/raakeysh/jasmine-test.git"
+    "url": "git+https://github.com/raakeysh/jasmine.git"
   },
   "author": "Rakesh Raut",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/raakeysh/jasmine-test/issues"
+    "url": "https://github.com/raakeysh/jasmine/issues"
   },
-  "homepage": "https://github.com/raakeysh/jasmine-test#readme",
+  "homepage": "https://github.com/raakeysh/jasmine#readme",
   "devDependencies": {
-    "typescript": "^4.1.3"
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
